# snow-lm

./: README.md  add_traces.py  bring_it_all_together_test.py  bubble_map.py  census_api_query.py  census_demographic_data.csv  climate_data.ipynb  climate_datasets.py  climate_events_per_year.py  data-viz.py  data_viz.py  data_viz_filter_map.py  data_viz_text.py  economic_impact.ipynb  economic_impact.py  eda_census_disaster_data_merged.py  exploratory_data_analysis.py  final_viz.py  pyproject.toml  sankey_map.py  state_pop_2000_2009.csv  state_pop_2010_2019.csv  state_pop_2020_2022.csv  voting_record.py
data/: state_pop_2010_2019.csv  state_pop_2020_2022.csv
snowlm/: __main__.py  app.py  bring_it_all_together_test.py  run.py
snowlm/EDA/: census_disaster_data_merged_eda.py  climate_eda.py  public_assistance_eda
snowlm/census_analysis/: census_api_query.py
snowlm/climate_analysis/: climate.py  climate_datasets.py
snowlm/data/: census_demographic_data.csv  state_pop_2000_2009.csv
snowlm/data_analysis/: climate.py  climate_econ_pop.py  economic_impact.py
snowlm/data_viz/: add_traces.py  bubble_map.py  final_viz.py
snowlm/econ_political_analysis/: economic_impact.py
snowlm/scrape_api/: census_api_query.py  voting_record.py
