[tool.poetry]
name = "30122-project-snow-lm"
version = "0.1.0"
description = ""
authors = ["Harsh Vardhan Pachisia <harshpachisia@linux3.cs.uchicago.edu>"]
readme = "README.md"
packages = [{include = "30122_project_snow_lm"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
requests = "^2.28.2"
lxml = "^4.9.2"
plotly-express = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
